--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,17 @@ img {
   float: top;
 }
 
+ul {
+  list-style-type: none;
+  text-align: justify;
+}
+
+.age p {
+  font-style: italic;
+  font-size: 20px;
+}
+
+h1 {
+  text-align: center;
+  background-color: bisque;
+}
